<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/liontownlogo"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/tbxAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tbxPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:text="@string/btnLogin"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/chkSaveAccountPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chkSaveAccountPwd" />
    
    <!-- <EditText
        android:id="@+id/tbxChangeAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="textPassword" /> -->
    <!-- <Button
        android:id="@+id/btnChangeAccountPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:text="确认更改账号"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:textSize="24sp" /> -->
    <Button
        android:id="@+id/btnExit"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:text="@string/btnExit"
        android:textColor="#ffffff"
        android:textSize="24sp" />
 
</LinearLayout>