<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OtherTransferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ot_tbxBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:inputType="text">

            <requestFocus
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </EditText>

        <Button
            android:id="@+id/ot_btn_Deal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/background"
            android:text="@string/btnDeal"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:visibility="gone" />
        <Button
            android:id="@+id/pt_btn_Scan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:background="@color/background"
            android:text="扫描"
            android:textColor="#ffffff"
            android:textSize="16sp"></Button>
    </LinearLayout>


    <TextView
        android:id="@+id/ot_BillNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_FromLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_ToLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_GRTotalQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_GITotalQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_TotalOnHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_TargetType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_TransferMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_ETA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <TextView
        android:id="@+id/ot_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ot_btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/btnCancel"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ot_btn_Delegate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/btnDelegate"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ot_btn_Wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/btnWait"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/ot_btn_NewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:text="@string/btnNewTask"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>